# sdlgauge

./: .gitignore  CMakeLists.txt  README.md
include/: config.h
src/: CMakeLists.txt  dashboard.cc  gauge.cc  gauge.h  graphics.cc  graphics.h  rasterizer.cc  rasterizer.h
src/model/: CMakeLists.txt  README.md  linear.cc  linear.h  model.cc  model.h
